--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
   
-        
+        <a href="#" onclick="barcodeScanner()">SCAN SOMETHING</a>
  
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="barcodescanner.js"></script>
@@ -35,7 +35,7 @@
                 );
             }
 
-            $(document).ready(barcodeScanner());
+            //$(document).ready(barcodeScanner());
         </script>
 
     </body>
