--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <body>
   
         <a href="#" onclick="barcodeScanner()">SCAN SOMETHING</a>
+        
+        <script type="text/javascript">
+            $(document).ready(barcodeScanner());
+        </script>
  
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="barcodescanner.js"></script>
@@ -34,8 +38,6 @@
                     }
                 );
             }
-
-            //$(document).ready(barcodeScanner());
         </script>
 
     </body>
