--- a/index.html
+++ b/index.html
@@ -6,18 +6,29 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.2.min.css" />
 
+        <!--include jquery and jquery mobile before DOM loads-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="js/jquery.mobile-1.3.2.min.js"></script>
 
         <title>Supply Source</title>
     </head>
     <body>
   
-        <a href="#" onclick="barcodeScanner()">SCAN SOMETHING</a>
-        
-        <script type="text/javascript">
-            $(document).ready(barcodeScanner());
-        </script>
+
+        <div data-role="page" data-theme="c"> 
+             <div data-role="header"> 
+                   <h1>Supply Source</h1> 
+             </div> 
+             <div data-role="content">      
+                    <a href="#" data-role="button" style="position: absolute; top: 50%; left:25%; width: 50%; margin-top: -1.2em;" onclick="barcodeScanner()">SCAN ITEM</a>
+
+             </div>
+        </div> 
+
+
+
  
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="barcodescanner.js"></script>
