--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.2.min.css" />
 
         <!--include jquery and jquery mobile before DOM loads-->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="js/jquery.min.js"></script>
         <script src="js/jquery.mobile-1.3.2.min.js"></script>
 
         <title>Supply Source</title>
