--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         
-        <!--<link rel="stylesheet" type="text/css" href="css/index.css" />-->
-        <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.2.min.css" />
+        <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
+        <!-- <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.2.min.css" /> -->
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile.flatui.css" />
 
         <!--include jquery and jquery mobile before DOM loads-->
         <script src="js/jquery.min.js"></script>
@@ -15,11 +16,14 @@
         <title>Supply Source</title>
     </head>
     <body>
-  
 
-        <div data-role="page" data-theme="c"> 
-             <div data-role="header"> 
+        <!-- Home screen -->
+        <div data-role="page" id="home" data-theme="b"> 
+             <div data-role="panel" id="panel" data-position="right" data-display="push"></div>
+             <div data-role="header" data-theme="b"> 
                    <h1>Supply Source</h1> 
+                   <!-- Sliding Panel -->
+                   <a data-iconpos="notext" href="#panel" data-role="button" class="ui-btn-right" data-icon="flat-menu"></a>
              </div> 
              <div data-role="content">      
                     <a href="#" data-role="button" style="position: absolute; top: 50%; left:25%; width: 50%; margin-top: -1.2em;" onclick="barcodeScanner()">SCAN ITEM</a>
