Data transition effect test

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                    <a data-iconpos="notext" href="#panel" data-role="button" class="ui-btn-right" data-icon="flat-menu"></a>
              </div> 
              <div data-role="content">      
-                    <a href="#" data-role="button" style="position: absolute; top: 50%; left:25%; width: 50%; margin-top: -1.2em;" onclick="barcodeScanner()">SCAN ITEM</a>
+                    <a href="#" data-role="button" data-transition="flow" style="position: absolute; top: 50%; left:25%; width: 50%; margin-top: -1.2em;" onclick="barcodeScanner()">SCAN ITEM</a>
 
              </div>
         </div> 
