--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
              <div data-role="content">      
                     <a href="#" data-role="button" data-transition="flow" style="position: absolute; top: 50%; left:25%; width: 50%; margin-top: -1.2em;" onclick="barcodeScanner()">SCAN ITEM</a>
 
-                    <a href="#popupBasic" data-rel="popup" data-role="button" data-inline="true" data-transition="flow">Scan Test</a>
-                    <div data-role="popup" id="popupBasic" onclick="barcodeScanner()">
-                    <p>Launching barcode scanner...</p>
-                    </div>
-
              </div>
+             <div data-role="fieldcontain">
+                <div data-role="controlgroup" data-type="horizontal" data-position="center" >
+                    <a href="#" data-icon="flat-mail" data-theme="a" data-iconpos="notext" data-role="button">Yes</a>
+                    <a href="#" data-icon="flat-camera" data-theme="a" data-iconpos="notext" data-role="button">Yes</a>
+                    <a href="#" data-icon="flat-heart" data-theme="a" data-iconpos="notext" data-role="button">Yes</a>
+                    <a href="#" data-icon="flat-eye" data-theme="a" data-iconpos="notext" data-role="button">Yes</a>
+                </div>
+            </div>
+
         </div> 
 
 
