Experimenting with UI changes

--- a/index.html
+++ b/index.html
@@ -29,18 +29,22 @@
                    <a data-iconpos="notext" href="#panel" data-role="button" class="ui-btn-right" data-icon="flat-menu"></a>
              </div> 
              
+             <!-- Testing Card Layout -->
+
+
              <div data-role="content">      
-                    <a href="#" data-role="button" data-transition="flow" style="position: absolute; top: 50%; left:25%; width: 50%; margin-top: -1.2em;" onclick="barcodeScanner()">SCAN ITEM</a>
+                    <a href="#" data-role="button" style="position: absolute; top: 50%; left:25%; width: 50%; margin-top: -1.2em;" onclick="barcodeScanner()">SCAN ITEM</a>
              </div>
             
             <!-- Footer -->
-            <div data-role="footer" data-theme="b" data-position="fixed">
+            <div data-role="footer" data-theme="a" data-position="fixed">
                 <center>
-                    <div data-role="controlgroup" data-type="horizontal">
-                      <a href="#" data-icon="flat-mail" data-theme="a" data-iconpos="notext" data-role="button">Yes</a>
-                      <a href="#" data-icon="flat-camera" data-theme="a" data-iconpos="notext" data-role="button">Yes</a>
-                      <a href="#" data-icon="flat-heart" data-theme="a" data-iconpos="notext" data-role="button">Yes</a>
-                      <a href="#" data-icon="flat-eye" data-theme="a" data-iconpos="notext" data-role="button">Yes</a>
+                    <div data-role="controlgroup" data-type="horizontal"> 
+                      <a href="#" data-icon="flat-mail" data-theme="b" data-iconpos="notext" data-role="button">Yes</a>
+                      <a href="#" data-icon="flat-camera" data-theme="b" data-iconpos="notext" data-role="button">Yes</a>
+                      <a href="#" data-icon="flat-eye" data-theme="b" data-iconpos="notext" data-role="button">Yes</a>
+                      <a href="#" data-icon="flat-mail" data-theme="b" data-iconpos="notext" data-role="button">Yes</a>
+                      <a href="#" data-icon="flat-heart" data-theme="b" data-iconpos="notext" data-role="button">Yes</a>
                     </div>
                 </center>
             </div>
