Reordered header elements

--- a/infopage.html
+++ b/infopage.html
@@ -26,7 +26,7 @@
 
         <!-- Home screen -->
         <div data-role="page" id="home" data-theme="b"> 
-             <div data-role="panel" id="panel" data-position="right" data-display="push" data-theme="a">
+             <div data-role="panel" id="panel" data-position="left" data-display="push" data-theme="a">
                 <a href="#" data-role="button">Hello World</a>
                 <a href="#" data-role="button">Hello World 2</a>
                 <a href="#" data-role="button">Hello World 3</a>
@@ -36,10 +36,10 @@
              <div data-role="header" data-theme="b" data-position="fixed"> 
                    <h1>Supply Source</h1> 
                    <!-- Barcode scanner icon -->
-                   <a data-iconpos="notext" href="#" data-role="button" class="ui-btn-left" data-icon="flat-camera" onclick="barcodeScanner()"></a>
+                   <a data-iconpos="notext" href="#" data-role="button" class="ui-btn-right" data-icon="flat-camera" onclick="barcodeScanner()"></a>
 
                    <!-- Sliding Panel -->
-                   <a data-iconpos="notext" href="#panel" data-role="button" class="ui-btn-right" data-icon="flat-menu"></a>
+                   <a data-iconpos="notext" href="#panel" data-role="button" class="ui-btn-left" data-icon="flat-menu"></a>
              </div> 
              
              <!-- Testing Card Layout -->
