--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+        <meta name="viewport" content="height=device-height,width=device-width,initial-scale=1.0,maximum-scale=1.0" >
         
         <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
         <!-- <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.2.min.css" /> -->
