--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
              <div data-role="header" data-theme="b" data-position="fixed"> 
                    <h1>Supply Source</h1> 
                    <!-- Barcode scanner icon -->
-                   <a data-iconpos="notext" href="#" data-role="button" class="ui-btn-right" data-icon="flat-camera" onclick="barcodeScanner()"></a>
+                   <a data-iconpos="notext" href="#" data-role="button" class="ui-btn-right" data-icon="flat-camera" onclick="serverRequest()"></a>
 
                    <!-- Sliding Panel -->
                    <a data-iconpos="notext" href="#panel" data-role="button" class="ui-btn-left" data-icon="flat-menu"></a>
@@ -114,10 +114,10 @@
         <script type="text/javascript">            
 
 
-            function serverRequest(recordId){
+            function serverRequest(){
                 //alert('asdf');
                 $.ajax({
-                    url: 'http://dry-bayou-7910.herokuapp.com/renderjson/' + recordID + '?callback=jsoncallback',
+                    url: 'http://dry-bayou-7910.herokuapp.com/renderjson/' + '3' + '?callback=jsoncallback',
                     //url: 'localhost:3000/renderjson',
                     type: "GET",
                     dataType: 'jsonp',
